--- a/index.html
+++ b/index.html
@@ -25,6 +25,52 @@
             0%, 100% { opacity: 1; }
             50% { opacity: .5; }
         }
+        :root[data-theme="dark"] {
+            color-scheme: dark;
+        }
+        :root[data-theme="dark"] body {
+            background-color: #0b1220;
+            color: #e2e8f0;
+        }
+        :root[data-theme="dark"] .bg-white {
+            background-color: #0f172a !important;
+        }
+        :root[data-theme="dark"] .bg-slate-50 {
+            background-color: #0b1220 !important;
+        }
+        :root[data-theme="dark"] .bg-slate-100 {
+            background-color: #111827 !important;
+        }
+        :root[data-theme="dark"] .bg-slate-200 {
+            background-color: #1f2937 !important;
+        }
+        :root[data-theme="dark"] .border-slate-100,
+        :root[data-theme="dark"] .border-slate-200 {
+            border-color: #1f2937 !important;
+        }
+        :root[data-theme="dark"] .text-slate-800 {
+            color: #e2e8f0 !important;
+        }
+        :root[data-theme="dark"] .text-slate-700 {
+            color: #cbd5f5 !important;
+        }
+        :root[data-theme="dark"] .text-slate-600 {
+            color: #94a3b8 !important;
+        }
+        :root[data-theme="dark"] .text-slate-500,
+        :root[data-theme="dark"] .text-slate-400 {
+            color: #94a3b8 !important;
+        }
+        :root[data-theme="dark"] .text-slate-300 {
+            color: #64748b !important;
+        }
+        :root[data-theme="dark"] .shadow-sm,
+        :root[data-theme="dark"] .shadow-md,
+        :root[data-theme="dark"] .shadow-lg,
+        :root[data-theme="dark"] .shadow-xl,
+        :root[data-theme="dark"] .shadow-2xl {
+            box-shadow: none !important;
+        }
     </style>
 <script type="importmap">
 {
