sidebar/nav update + dark mode fix for card labels

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         :root[data-theme="dark"] .bg-slate-200 {
             background-color: #1f2937 !important;
         }
+        :root[data-theme="dark"] .bg-indigo-50 {
+            background-color: #1e293b !important;
+        }
+        :root[data-theme="dark"] .border-indigo-500 {
+            border-color: #6366f1 !important;
+        }
         :root[data-theme="dark"] .border-slate-100,
         :root[data-theme="dark"] .border-slate-200 {
             border-color: #1f2937 !important;
