dark theme update

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         :root[data-theme="dark"] .bg-slate-200 {
             background-color: #1f2937 !important;
         }
+        :root[data-theme="dark"] .bg-slate-300 {
+            background-color: #334155 !important;
+        }
         :root[data-theme="dark"] .bg-indigo-50 {
             background-color: #1e293b !important;
         }
@@ -51,11 +54,15 @@
             border-color: #6366f1 !important;
         }
         :root[data-theme="dark"] .border-slate-100,
-        :root[data-theme="dark"] .border-slate-200 {
+        :root[data-theme="dark"] .border-slate-200,
+        :root[data-theme="dark"] .border-slate-300 {
             border-color: #1f2937 !important;
         }
         :root[data-theme="dark"] .text-slate-800 {
             color: #e2e8f0 !important;
+        }
+        :root[data-theme="dark"] .text-slate-900 {
+            color: #f8fafc !important;
         }
         :root[data-theme="dark"] .text-slate-700 {
             color: #cbd5f5 !important;
@@ -69,6 +76,12 @@
         }
         :root[data-theme="dark"] .text-slate-300 {
             color: #64748b !important;
+        }
+        :root[data-theme="dark"] .text-slate-200 {
+            color: #cbd5f5 !important;
+        }
+        :root[data-theme="dark"] .text-slate-100 {
+            color: #e2e8f0 !important;
         }
         :root[data-theme="dark"] .shadow-sm,
         :root[data-theme="dark"] .shadow-md,
