--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
         :root[data-theme="dark"] .shadow-2xl {
             box-shadow: none !important;
         }
+        :root[data-theme="dark"] .bg-red-50 {
+            background-color: #1f2937 !important;
+        }
         :root[data-skin="notebook"] body {
             font-family: "IBM Plex Mono", monospace;
-            background-color: #f8fafc;
         }
         :root[data-skin="notebook"] h1,
         :root[data-skin="notebook"] h2,
@@ -100,19 +102,60 @@
         :root[data-skin="notebook"] .font-display {
             font-family: "IBM Plex Mono", monospace;
         }
-        :root[data-skin="notebook"] .bg-indigo-900 {
-            background-color: #111827 !important;
+        :root[data-skin="notebook"][data-theme="light"] body {
+            background-color: #f9fafb;
+            color: #111827;
         }
-        :root[data-skin="notebook"] .bg-indigo-800 {
-            background-color: #111827 !important;
+        :root[data-skin="notebook"][data-theme="dark"] body {
+            background-color: #0b0b0b;
+            color: #f8fafc;
         }
-        :root[data-skin="notebook"] .bg-indigo-700 {
-            background-color: #1f2937 !important;
+        :root[data-skin="notebook"][data-theme="dark"] .bg-white {
+            background-color: #0f0f0f !important;
         }
-        :root[data-skin="notebook"] .text-indigo-100,
-        :root[data-skin="notebook"] .text-indigo-200,
-        :root[data-skin="notebook"] .text-indigo-300 {
-            color: #e5e7eb !important;
+        :root[data-skin="notebook"][data-theme="dark"] .bg-slate-100 {
+            background-color: #121212 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .bg-slate-200 {
+            background-color: #1a1a1a !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .bg-slate-300 {
+            background-color: #242424 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .border-slate-100,
+        :root[data-skin="notebook"][data-theme="dark"] .border-slate-200,
+        :root[data-skin="notebook"][data-theme="dark"] .border-slate-300 {
+            border-color: #262626 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .text-slate-300 {
+            color: #cbd5e1 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .text-slate-400 {
+            color: #e2e8f0 !important;
+        }
+        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-900,
+        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-800,
+        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-700 {
+            background-color: #e5e7eb !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .bg-indigo-900 {
+            background-color: #0b0b0b !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .bg-indigo-800 {
+            background-color: #111111 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .bg-indigo-700 {
+            background-color: #151515 !important;
+        }
+        :root[data-skin="notebook"][data-theme="light"] .text-indigo-100,
+        :root[data-skin="notebook"][data-theme="light"] .text-indigo-200,
+        :root[data-skin="notebook"][data-theme="light"] .text-indigo-300 {
+            color: #111827 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .text-indigo-100,
+        :root[data-skin="notebook"][data-theme="dark"] .text-indigo-200,
+        :root[data-skin="notebook"][data-theme="dark"] .text-indigo-300 {
+            color: #f9fafb !important;
         }
         :root[data-skin="notebook"] .bg-indigo-600 {
             background-color: #b91c1c !important;
@@ -127,14 +170,20 @@
             background-color: #e5e7eb !important;
             color: #111827 !important;
         }
-        :root[data-skin="notebook"] .bg-slate-50 {
+        :root[data-skin="notebook"][data-theme="light"] .bg-slate-50 {
             background-color: #f9fafb !important;
         }
-        :root[data-skin="notebook"] .text-slate-800 {
+        :root[data-skin="notebook"][data-theme="dark"] .bg-slate-50 {
+            background-color: #0f0f0f !important;
+        }
+        :root[data-skin="notebook"][data-theme="light"] .text-slate-800 {
             color: #111827 !important;
         }
-        :root[data-skin="notebook"] .text-slate-500 {
+        :root[data-skin="notebook"][data-theme="light"] .text-slate-500 {
             color: #4b5563 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .text-slate-500 {
+            color: #d1d5db !important;
         }
     </style>
 <script type="importmap">
