--- a/index.html
+++ b/index.html
@@ -133,30 +133,61 @@
         :root[data-skin="notebook"][data-theme="dark"] .text-slate-400 {
             color: #e2e8f0 !important;
         }
-        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-900,
-        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-800,
-        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-700 {
-            background-color: #e5e7eb !important;
+        /* Notebook Light: Sidebar stays dark like a terminal */
+        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-900 {
+            background-color: #171717 !important;
         }
+        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-800 {
+            background-color: #262626 !important;
+        }
+        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-700 {
+            background-color: #404040 !important;
+        }
+        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-950 {
+            background-color: #0a0a0a !important;
+        }
+
+        /* Notebook Dark: Better contrast with varied grays */
         :root[data-skin="notebook"][data-theme="dark"] .bg-indigo-900 {
-            background-color: #0b0b0b !important;
+            background-color: #0a0a0a !important;
         }
         :root[data-skin="notebook"][data-theme="dark"] .bg-indigo-800 {
-            background-color: #111111 !important;
+            background-color: #1a1a1a !important;
         }
         :root[data-skin="notebook"][data-theme="dark"] .bg-indigo-700 {
-            background-color: #151515 !important;
+            background-color: #262626 !important;
         }
-        :root[data-skin="notebook"][data-theme="light"] .text-indigo-100,
-        :root[data-skin="notebook"][data-theme="light"] .text-indigo-200,
+        :root[data-skin="notebook"][data-theme="dark"] .bg-indigo-950 {
+            background-color: #000000 !important;
+        }
+
+        /* Notebook: Text colors for navigation - keep light on dark sidebar */
+        :root[data-skin="notebook"][data-theme="light"] .text-indigo-100 {
+            color: #d1d5db !important;
+        }
+        :root[data-skin="notebook"][data-theme="light"] .text-indigo-200 {
+            color: #e5e7eb !important;
+        }
         :root[data-skin="notebook"][data-theme="light"] .text-indigo-300 {
-            color: #111827 !important;
+            color: #cbd5e1 !important;
         }
-        :root[data-skin="notebook"][data-theme="dark"] .text-indigo-100,
-        :root[data-skin="notebook"][data-theme="dark"] .text-indigo-200,
+        :root[data-skin="notebook"][data-theme="light"] .text-indigo-400 {
+            color: #94a3b8 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .text-indigo-100 {
+            color: #d1d5db !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .text-indigo-200 {
+            color: #e5e7eb !important;
+        }
         :root[data-skin="notebook"][data-theme="dark"] .text-indigo-300 {
-            color: #f9fafb !important;
+            color: #cbd5e1 !important;
         }
+        :root[data-skin="notebook"][data-theme="dark"] .text-indigo-400 {
+            color: #94a3b8 !important;
+        }
+
+        /* Notebook: Accent colors - red instead of indigo */
         :root[data-skin="notebook"] .bg-indigo-600 {
             background-color: #b91c1c !important;
         }
@@ -170,28 +201,44 @@
             background-color: #e5e7eb !important;
             color: #111827 !important;
         }
+
+        /* Notebook Light: Main content backgrounds */
         :root[data-skin="notebook"][data-theme="light"] .bg-slate-50 {
             background-color: #f9fafb !important;
         }
-        :root[data-skin="notebook"][data-theme="dark"] .bg-slate-50 {
-            background-color: #0f0f0f !important;
+        :root[data-skin="notebook"][data-theme="light"] .bg-white {
+            background-color: #ffffff !important;
         }
+        :root[data-skin="notebook"][data-theme="light"] .bg-slate-100 {
+            background-color: #f3f4f6 !important;
+        }
+
+        /* Notebook Dark: Main content backgrounds with better contrast */
+        :root[data-skin="notebook"][data-theme="dark"] .bg-slate-50 {
+            background-color: #171717 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .bg-white {
+            background-color: #1a1a1a !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .bg-slate-100 {
+            background-color: #262626 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .bg-slate-200 {
+            background-color: #333333 !important;
+        }
+
+        /* Notebook Light: Text colors for main content */
         :root[data-skin="notebook"][data-theme="light"] .text-slate-800 {
             color: #111827 !important;
         }
-        :root[data-skin="notebook"][data-theme="light"] .text-slate-500 {
-            color: #4b5563 !important;
-        }
-        :root[data-skin="notebook"][data-theme="dark"] .text-slate-500 {
-            color: #d1d5db !important;
-        }
-
-        /* Notebook theme: Fix header text in light mode */
         :root[data-skin="notebook"][data-theme="light"] .text-slate-700 {
             color: #374151 !important;
         }
         :root[data-skin="notebook"][data-theme="light"] .text-slate-600 {
             color: #4b5563 !important;
+        }
+        :root[data-skin="notebook"][data-theme="light"] .text-slate-500 {
+            color: #6b7280 !important;
         }
         :root[data-skin="notebook"][data-theme="light"] .text-slate-400 {
             color: #9ca3af !important;
@@ -200,43 +247,53 @@
             color: #111827 !important;
         }
 
-        /* Notebook theme: Navigation hover states - gray instead of purple */
-        :root[data-skin="notebook"] .bg-indigo-800 {
-            background-color: #262626 !important;
+        /* Notebook Dark: Text colors with better contrast */
+        :root[data-skin="notebook"][data-theme="dark"] .text-slate-800 {
+            color: #e5e7eb !important;
         }
-        :root[data-skin="notebook"][data-theme="light"] .bg-indigo-900 {
-            background-color: #171717 !important;
+        :root[data-skin="notebook"][data-theme="dark"] .text-slate-700 {
+            color: #d1d5db !important;
         }
-        :root[data-skin="notebook"][data-theme="dark"] .bg-indigo-900 {
-            background-color: #171717 !important;
+        :root[data-skin="notebook"][data-theme="dark"] .text-slate-600 {
+            color: #cbd5e1 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .text-slate-500 {
+            color: #9ca3af !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .text-slate-400 {
+            color: #9ca3af !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .text-slate-300 {
+            color: #cbd5e1 !important;
         }
 
-        /* Notebook theme: Table row hover states */
+        /* Notebook: Table row hover states */
         :root[data-skin="notebook"][data-theme="light"] .hover\:bg-white:hover {
             background-color: #f3f4f6 !important;
         }
         :root[data-skin="notebook"][data-theme="dark"] .hover\:bg-white:hover {
-            background-color: #1a1a1a !important;
+            background-color: #262626 !important;
         }
         :root[data-skin="notebook"][data-theme="light"] .hover\:bg-slate-50:hover {
             background-color: #f3f4f6 !important;
         }
         :root[data-skin="notebook"][data-theme="dark"] .hover\:bg-slate-50:hover {
-            background-color: #1a1a1a !important;
+            background-color: #262626 !important;
         }
         :root[data-skin="notebook"][data-theme="light"] .hover\:bg-indigo-50:hover {
             background-color: #e5e7eb !important;
         }
         :root[data-skin="notebook"][data-theme="dark"] .hover\:bg-indigo-50:hover {
-            background-color: #1a1a1a !important;
+            background-color: #262626 !important;
         }
 
-        /* Notebook theme: Fix white backgrounds in light mode */
-        :root[data-skin="notebook"][data-theme="light"] .bg-white {
-            background-color: #ffffff !important;
+        /* Notebook Dark: Border colors for better visibility */
+        :root[data-skin="notebook"][data-theme="dark"] .border-slate-100,
+        :root[data-skin="notebook"][data-theme="dark"] .border-slate-200 {
+            border-color: #333333 !important;
         }
-        :root[data-skin="notebook"][data-theme="light"] .bg-slate-100 {
-            background-color: #f3f4f6 !important;
+        :root[data-skin="notebook"][data-theme="dark"] .border-indigo-800 {
+            border-color: #404040 !important;
         }
     </style>
 <script type="importmap">
