Add Markdown editor and preview components for enhanced instruction formatting

--- a/index.html
+++ b/index.html
@@ -295,6 +295,138 @@
         :root[data-skin="notebook"][data-theme="dark"] .border-indigo-800 {
             border-color: #404040 !important;
         }
+
+        /* Markdown Preview Styles */
+        .markdown-preview {
+            line-height: 1.6;
+            color: #334155;
+        }
+        .markdown-preview h1 {
+            font-size: 1.5rem;
+            font-weight: 700;
+            margin-top: 1.5rem;
+            margin-bottom: 0.75rem;
+            color: #1e293b;
+        }
+        .markdown-preview h2 {
+            font-size: 1.25rem;
+            font-weight: 700;
+            margin-top: 1.25rem;
+            margin-bottom: 0.5rem;
+            color: #1e293b;
+        }
+        .markdown-preview h3 {
+            font-size: 1.1rem;
+            font-weight: 600;
+            margin-top: 1rem;
+            margin-bottom: 0.5rem;
+            color: #1e293b;
+        }
+        .markdown-preview h1:first-child,
+        .markdown-preview h2:first-child,
+        .markdown-preview h3:first-child {
+            margin-top: 0;
+        }
+        .markdown-preview p {
+            margin-bottom: 0.75rem;
+        }
+        .markdown-preview ul, .markdown-preview ol {
+            margin-left: 1.5rem;
+            margin-bottom: 0.75rem;
+        }
+        .markdown-preview ul {
+            list-style-type: disc;
+        }
+        .markdown-preview ol {
+            list-style-type: decimal;
+        }
+        .markdown-preview li {
+            margin-bottom: 0.25rem;
+        }
+        .markdown-preview strong {
+            font-weight: 700;
+            color: #1e293b;
+        }
+        .markdown-preview em {
+            font-style: italic;
+        }
+        .markdown-preview code {
+            background-color: #f1f5f9;
+            padding: 0.125rem 0.375rem;
+            border-radius: 0.25rem;
+            font-family: 'Courier New', monospace;
+            font-size: 0.875em;
+            color: #be123c;
+        }
+        .markdown-preview pre {
+            background-color: #f1f5f9;
+            padding: 0.75rem;
+            border-radius: 0.5rem;
+            overflow-x: auto;
+            margin-bottom: 0.75rem;
+        }
+        .markdown-preview pre code {
+            background-color: transparent;
+            padding: 0;
+            color: #334155;
+        }
+        .markdown-preview blockquote {
+            border-left: 4px solid #cbd5e1;
+            padding-left: 1rem;
+            margin-left: 0;
+            margin-bottom: 0.75rem;
+            color: #64748b;
+            font-style: italic;
+        }
+        .markdown-preview a {
+            color: #4f46e5;
+            text-decoration: underline;
+        }
+        .markdown-preview a:hover {
+            color: #4338ca;
+        }
+        .markdown-preview hr {
+            border: none;
+            border-top: 2px solid #e2e8f0;
+            margin: 1.5rem 0;
+        }
+        .markdown-preview img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 0.5rem;
+            margin: 0.75rem 0;
+        }
+
+        /* Dark mode markdown styles */
+        :root[data-theme="dark"] .markdown-preview {
+            color: #cbd5e1;
+        }
+        :root[data-theme="dark"] .markdown-preview h1,
+        :root[data-theme="dark"] .markdown-preview h2,
+        :root[data-theme="dark"] .markdown-preview h3,
+        :root[data-theme="dark"] .markdown-preview strong {
+            color: #e2e8f0;
+        }
+        :root[data-theme="dark"] .markdown-preview code {
+            background-color: #1e293b;
+            color: #fda4af;
+        }
+        :root[data-theme="dark"] .markdown-preview pre {
+            background-color: #1e293b;
+        }
+        :root[data-theme="dark"] .markdown-preview pre code {
+            color: #cbd5e1;
+        }
+        :root[data-theme="dark"] .markdown-preview blockquote {
+            border-left-color: #475569;
+            color: #94a3b8;
+        }
+        :root[data-theme="dark"] .markdown-preview a {
+            color: #818cf8;
+        }
+        :root[data-theme="dark"] .markdown-preview a:hover {
+            color: #a5b4fc;
+        }
     </style>
 <script type="importmap">
 {
