--- a/index.html
+++ b/index.html
@@ -296,6 +296,307 @@
             border-color: #404040 !important;
         }
 
+        /* ========================================
+           MODERN THEME - Linear-inspired compact design
+           ======================================== */
+
+        /* Modern: Base typography - cleaner Inter with tighter letter-spacing */
+        :root[data-skin="modern"] body {
+            font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
+            letter-spacing: -0.011em;
+        }
+        :root[data-skin="modern"] h1,
+        :root[data-skin="modern"] h2,
+        :root[data-skin="modern"] h3,
+        :root[data-skin="modern"] .font-display {
+            font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
+            font-weight: 600;
+            letter-spacing: -0.02em;
+        }
+
+        /* Modern Light: Backgrounds */
+        :root[data-skin="modern"][data-theme="light"] body {
+            background-color: #f9fafb;
+            color: #1f2937;
+        }
+        :root[data-skin="modern"][data-theme="light"] .bg-white {
+            background-color: #ffffff !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .bg-slate-50 {
+            background-color: #f9fafb !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .bg-slate-100 {
+            background-color: #f3f4f6 !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .bg-slate-200 {
+            background-color: #e5e7eb !important;
+        }
+
+        /* Modern Dark: Backgrounds - Linear-style dark with subtle blue tint */
+        :root[data-skin="modern"][data-theme="dark"] body {
+            background-color: #0d0d0f;
+            color: #e5e7eb;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-white {
+            background-color: #141416 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-slate-50 {
+            background-color: #0d0d0f !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-slate-100 {
+            background-color: #18181b !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-slate-200 {
+            background-color: #1f1f23 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-slate-300 {
+            background-color: #27272a !important;
+        }
+
+        /* Modern: Sidebar - always dark like Linear */
+        :root[data-skin="modern"] .bg-indigo-900 {
+            background-color: #0d0d0f !important;
+        }
+        :root[data-skin="modern"] .bg-indigo-800 {
+            background-color: #18181b !important;
+        }
+        :root[data-skin="modern"] .bg-indigo-700 {
+            background-color: #27272a !important;
+        }
+        :root[data-skin="modern"] .bg-indigo-950 {
+            background-color: #09090b !important;
+        }
+
+        /* Modern: Accent colors - muted violet like Linear */
+        :root[data-skin="modern"] .bg-indigo-600 {
+            background-color: #5E6AD2 !important;
+        }
+        :root[data-skin="modern"] .bg-indigo-600:hover {
+            background-color: #4F5BC0 !important;
+        }
+        :root[data-skin="modern"] .text-indigo-600 {
+            color: #5E6AD2 !important;
+        }
+        :root[data-skin="modern"] .border-indigo-500 {
+            border-color: #5E6AD2 !important;
+        }
+        :root[data-skin="modern"] .bg-indigo-50 {
+            background-color: rgba(94, 106, 210, 0.08) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-indigo-50 {
+            background-color: rgba(94, 106, 210, 0.12) !important;
+        }
+
+        /* Modern: Secondary accent - subtle amber/yellow for status */
+        :root[data-skin="modern"] .bg-amber-400 {
+            background-color: #fbbf24 !important;
+            color: #1f2937 !important;
+        }
+
+        /* Modern: Navigation text colors */
+        :root[data-skin="modern"] .text-indigo-100 {
+            color: #a1a1aa !important;
+        }
+        :root[data-skin="modern"] .text-indigo-200 {
+            color: #d4d4d8 !important;
+        }
+        :root[data-skin="modern"] .text-indigo-300 {
+            color: #a1a1aa !important;
+        }
+        :root[data-skin="modern"] .text-indigo-400 {
+            color: #71717a !important;
+        }
+
+        /* Modern Light: Text colors - cooler grays */
+        :root[data-skin="modern"][data-theme="light"] .text-slate-900 {
+            color: #111827 !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .text-slate-800 {
+            color: #1f2937 !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .text-slate-700 {
+            color: #374151 !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .text-slate-600 {
+            color: #4b5563 !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .text-slate-500 {
+            color: #6b7280 !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .text-slate-400 {
+            color: #9ca3af !important;
+        }
+
+        /* Modern Dark: Text colors */
+        :root[data-skin="modern"][data-theme="dark"] .text-slate-900 {
+            color: #f9fafb !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-slate-800 {
+            color: #e5e7eb !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-slate-700 {
+            color: #d1d5db !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-slate-600 {
+            color: #9ca3af !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-slate-500 {
+            color: #6b7280 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-slate-400 {
+            color: #6b7280 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-slate-300 {
+            color: #9ca3af !important;
+        }
+
+        /* Modern: Border colors - very subtle */
+        :root[data-skin="modern"][data-theme="light"] .border-slate-100,
+        :root[data-skin="modern"][data-theme="light"] .border-slate-200 {
+            border-color: #e5e7eb !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .border-slate-300 {
+            border-color: #d1d5db !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .border-slate-100,
+        :root[data-skin="modern"][data-theme="dark"] .border-slate-200 {
+            border-color: #27272a !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .border-slate-300 {
+            border-color: #3f3f46 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .border-indigo-800 {
+            border-color: #27272a !important;
+        }
+
+        /* Modern: Compact spacing - reduce padding */
+        :root[data-skin="modern"] .p-8 {
+            padding: 1.25rem !important;
+        }
+        :root[data-skin="modern"] .p-6 {
+            padding: 1rem !important;
+        }
+        :root[data-skin="modern"] .p-4 {
+            padding: 0.75rem !important;
+        }
+        :root[data-skin="modern"] .px-8 {
+            padding-left: 1.25rem !important;
+            padding-right: 1.25rem !important;
+        }
+        :root[data-skin="modern"] .px-6 {
+            padding-left: 1rem !important;
+            padding-right: 1rem !important;
+        }
+        :root[data-skin="modern"] .py-8 {
+            padding-top: 1.25rem !important;
+            padding-bottom: 1.25rem !important;
+        }
+        :root[data-skin="modern"] .py-6 {
+            padding-top: 1rem !important;
+            padding-bottom: 1rem !important;
+        }
+        :root[data-skin="modern"] .py-3 {
+            padding-top: 0.625rem !important;
+            padding-bottom: 0.625rem !important;
+        }
+
+        /* Modern: Compact margins */
+        :root[data-skin="modern"] .space-y-8 > * + * {
+            margin-top: 1.25rem !important;
+        }
+        :root[data-skin="modern"] .space-y-6 > * + * {
+            margin-top: 1rem !important;
+        }
+        :root[data-skin="modern"] .gap-8 {
+            gap: 1.25rem !important;
+        }
+        :root[data-skin="modern"] .gap-6 {
+            gap: 1rem !important;
+        }
+
+        /* Modern: Smaller border radius - Linear uses subtle rounding */
+        :root[data-skin="modern"] .rounded-3xl {
+            border-radius: 0.75rem !important;
+        }
+        :root[data-skin="modern"] .rounded-2xl {
+            border-radius: 0.5rem !important;
+        }
+        :root[data-skin="modern"] .rounded-xl {
+            border-radius: 0.375rem !important;
+        }
+        :root[data-skin="modern"] .rounded-lg {
+            border-radius: 0.25rem !important;
+        }
+        :root[data-skin="modern"] .rounded-full {
+            border-radius: 9999px !important;
+        }
+
+        /* Modern: No shadows - flat design */
+        :root[data-skin="modern"] .shadow-sm,
+        :root[data-skin="modern"] .shadow-md,
+        :root[data-skin="modern"] .shadow-lg,
+        :root[data-skin="modern"] .shadow-xl,
+        :root[data-skin="modern"] .shadow-2xl {
+            box-shadow: none !important;
+        }
+
+        /* Modern: Hover states */
+        :root[data-skin="modern"][data-theme="light"] .hover\:bg-white:hover {
+            background-color: #f3f4f6 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .hover\:bg-white:hover {
+            background-color: #1f1f23 !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .hover\:bg-slate-50:hover {
+            background-color: #f3f4f6 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .hover\:bg-slate-50:hover {
+            background-color: #1f1f23 !important;
+        }
+        :root[data-skin="modern"][data-theme="light"] .hover\:bg-indigo-50:hover {
+            background-color: rgba(94, 106, 210, 0.1) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .hover\:bg-indigo-50:hover {
+            background-color: rgba(94, 106, 210, 0.15) !important;
+        }
+
+        /* Modern: Typography adjustments */
+        :root[data-skin="modern"] .text-5xl {
+            font-size: 2rem !important;
+            line-height: 1.2 !important;
+        }
+        :root[data-skin="modern"] .text-4xl {
+            font-size: 1.75rem !important;
+            line-height: 1.2 !important;
+        }
+        :root[data-skin="modern"] .text-3xl {
+            font-size: 1.5rem !important;
+            line-height: 1.25 !important;
+        }
+        :root[data-skin="modern"] .text-2xl {
+            font-size: 1.25rem !important;
+            line-height: 1.3 !important;
+        }
+        :root[data-skin="modern"] .text-xl {
+            font-size: 1.125rem !important;
+            line-height: 1.4 !important;
+        }
+        :root[data-skin="modern"] .text-lg {
+            font-size: 1rem !important;
+            line-height: 1.5 !important;
+        }
+
+        /* Modern: Font weights - slightly lighter feel */
+        :root[data-skin="modern"] .font-black {
+            font-weight: 700 !important;
+        }
+        :root[data-skin="modern"] .font-bold {
+            font-weight: 600 !important;
+        }
+        :root[data-skin="modern"] .font-semibold {
+            font-weight: 500 !important;
+        }
+
         /* Markdown Preview Styles */
         .markdown-preview {
             line-height: 1.6;
