Implement multi-prompt selection and update assignment handling for multiple prompts

--- a/index.html
+++ b/index.html
@@ -597,6 +597,119 @@
             font-weight: 500 !important;
         }
 
+        /* Modern Dark: Colored backgrounds - muted versions for dark mode */
+        :root[data-skin="modern"][data-theme="dark"] .bg-violet-50 {
+            background-color: rgba(139, 92, 246, 0.15) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-red-50 {
+            background-color: rgba(239, 68, 68, 0.15) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-green-50 {
+            background-color: rgba(34, 197, 94, 0.1) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-green-100 {
+            background-color: rgba(34, 197, 94, 0.15) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-green-600 {
+            background-color: #16a34a !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-blue-50 {
+            background-color: rgba(59, 130, 246, 0.15) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-purple-100 {
+            background-color: rgba(168, 85, 247, 0.15) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-amber-100 {
+            background-color: rgba(251, 191, 36, 0.15) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .bg-indigo-100 {
+            background-color: rgba(99, 102, 241, 0.15) !important;
+        }
+
+        /* Modern Dark: Colored text - slightly brighter for dark mode */
+        :root[data-skin="modern"][data-theme="dark"] .text-green-700,
+        :root[data-skin="modern"][data-theme="dark"] .text-green-600 {
+            color: #4ade80 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-purple-600 {
+            color: #c084fc !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-amber-600,
+        :root[data-skin="modern"][data-theme="dark"] .text-amber-700 {
+            color: #fbbf24 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-blue-600 {
+            color: #60a5fa !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-red-600,
+        :root[data-skin="modern"][data-theme="dark"] .text-red-700 {
+            color: #f87171 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .text-violet-500 {
+            color: #a78bfa !important;
+        }
+
+        /* Modern Dark: Colored borders */
+        :root[data-skin="modern"][data-theme="dark"] .border-violet-500 {
+            border-color: #8b5cf6 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .border-violet-200 {
+            border-color: rgba(139, 92, 246, 0.3) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .border-red-500 {
+            border-color: #ef4444 !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .border-red-200 {
+            border-color: rgba(239, 68, 68, 0.3) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .border-green-200,
+        :root[data-skin="modern"][data-theme="dark"] .border-green-300 {
+            border-color: rgba(34, 197, 94, 0.3) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .border-blue-100 {
+            border-color: rgba(59, 130, 246, 0.2) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .border-indigo-200 {
+            border-color: rgba(99, 102, 241, 0.3) !important;
+        }
+
+        /* Modern Dark: Hover states for colored backgrounds */
+        :root[data-skin="modern"][data-theme="dark"] .hover\:bg-green-50:hover {
+            background-color: rgba(34, 197, 94, 0.15) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .hover\:bg-green-100:hover {
+            background-color: rgba(34, 197, 94, 0.2) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .hover\:bg-green-700:hover {
+            background-color: #15803d !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .hover\:border-violet-200:hover {
+            border-color: rgba(139, 92, 246, 0.4) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .hover\:border-red-200:hover {
+            border-color: rgba(239, 68, 68, 0.4) !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .hover\:border-indigo-200:hover {
+            border-color: rgba(99, 102, 241, 0.4) !important;
+        }
+
+        /* Modern Dark: Input and form elements */
+        :root[data-skin="modern"][data-theme="dark"] input[type="text"],
+        :root[data-skin="modern"][data-theme="dark"] input[type="email"],
+        :root[data-skin="modern"][data-theme="dark"] input[type="password"],
+        :root[data-skin="modern"][data-theme="dark"] input[type="date"],
+        :root[data-skin="modern"][data-theme="dark"] input[type="datetime-local"],
+        :root[data-skin="modern"][data-theme="dark"] textarea,
+        :root[data-skin="modern"][data-theme="dark"] select {
+            background-color: #18181b !important;
+            border-color: #27272a !important;
+            color: #e5e7eb !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] input::placeholder,
+        :root[data-skin="modern"][data-theme="dark"] textarea::placeholder {
+            color: #52525b !important;
+        }
+
         /* Markdown Preview Styles */
         .markdown-preview {
             line-height: 1.6;
