Light mode color fixes / Open Graph meta tags update

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camp | Songwriter Toolkit</title>
+    <title>Camp · Songwriter Toolkit</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⛺</text></svg>">
+    <meta name="description" content="A collaborative toolkit for songwriting camps.">
+    <meta property="og:title" content="Camp · Songwriter Toolkit">
+    <meta property="og:description" content="A collaborative toolkit for songwriting camps.">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Camp · Songwriter Toolkit">
+    <meta name="twitter:description" content="A collaborative toolkit for songwriting camps.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;600;800&family=IBM+Plex+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -769,6 +776,28 @@
         :root[data-skin="modern"][data-theme="dark"] input::placeholder,
         :root[data-skin="modern"][data-theme="dark"] textarea::placeholder {
             color: #52525b !important;
+        }
+
+        /* Event card - needs its own colors so sidebar theme overrides don't affect it */
+        .camp-event-card {
+            background-color: #312e81;
+            color: #ffffff;
+        }
+        .camp-event-card:hover {
+            background-color: #3730a3;
+        }
+        :root[data-skin="modern"] .camp-event-card {
+            background-color: #1e1b4b;
+        }
+        :root[data-skin="modern"] .camp-event-card:hover {
+            background-color: #312e81;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .camp-event-card {
+            background-color: #18181b;
+            border: 1px solid #27272a;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .camp-event-card:hover {
+            background-color: #1f1f23;
         }
 
         /* Markdown Preview Styles */
