URL Slug/OG updates

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="Camp · Songwriter Toolkit">
     <meta property="og:description" content="A collaborative toolkit for songwriting camps.">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Camp · Songwriter Toolkit">
     <meta name="twitter:description" content="A collaborative toolkit for songwriting camps.">
