Design updates (max-width on all pages for large screens / dark mode fixes / Song Detail update)

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
         :root[data-theme="dark"] .border-slate-300 {
             border-color: #1f2937 !important;
         }
+        :root[data-theme="dark"] .divide-slate-100 > :not([hidden]) ~ :not([hidden]),
+        :root[data-theme="dark"] .divide-slate-200 > :not([hidden]) ~ :not([hidden]) {
+            border-color: #1f2937 !important;
+        }
         :root[data-theme="dark"] .text-slate-800 {
             color: #e2e8f0 !important;
         }
@@ -149,6 +153,10 @@
         :root[data-skin="notebook"][data-theme="dark"] .border-slate-100,
         :root[data-skin="notebook"][data-theme="dark"] .border-slate-200,
         :root[data-skin="notebook"][data-theme="dark"] .border-slate-300 {
+            border-color: #262626 !important;
+        }
+        :root[data-skin="notebook"][data-theme="dark"] .divide-slate-100 > :not([hidden]) ~ :not([hidden]),
+        :root[data-skin="notebook"][data-theme="dark"] .divide-slate-200 > :not([hidden]) ~ :not([hidden]) {
             border-color: #262626 !important;
         }
         :root[data-skin="notebook"][data-theme="dark"] .text-slate-300 {
@@ -542,6 +550,10 @@
         }
         :root[data-skin="modern"][data-theme="dark"] .border-slate-100,
         :root[data-skin="modern"][data-theme="dark"] .border-slate-200 {
+            border-color: #27272a !important;
+        }
+        :root[data-skin="modern"][data-theme="dark"] .divide-slate-100 > :not([hidden]) ~ :not([hidden]),
+        :root[data-skin="modern"][data-theme="dark"] .divide-slate-200 > :not([hidden]) ~ :not([hidden]) {
             border-color: #27272a !important;
         }
         :root[data-skin="modern"][data-theme="dark"] .border-slate-300 {
