--- a/index.html
+++ b/index.html
@@ -830,6 +830,8 @@
         .markdown-preview {
             line-height: 1.6;
             color: #334155;
+            overflow-wrap: break-word;
+            word-break: break-word;
         }
         .markdown-preview h1 {
             font-size: 1.5rem;
