Dark Mode fixes

--- a/index.html
+++ b/index.html
@@ -122,6 +122,52 @@
         :root[data-theme="dark"] .bg-red-50 {
             background-color: #1f2937 !important;
         }
+        :root[data-theme="dark"] .bg-green-50,
+        :root[data-theme="dark"] .from-green-50 {
+            background-color: #0d2818 !important;
+            --tw-gradient-from: #0d2818 !important;
+        }
+        :root[data-theme="dark"] .to-green-100 {
+            --tw-gradient-to: #132f1e !important;
+        }
+        :root[data-theme="dark"] .bg-green-100 {
+            background-color: #132f1e !important;
+        }
+        :root[data-theme="dark"] .border-green-200,
+        :root[data-theme="dark"] .border-green-300 {
+            border-color: #1a4028 !important;
+        }
+        :root[data-theme="dark"] .text-green-600 {
+            color: #4ade80 !important;
+        }
+        :root[data-theme="dark"] .text-green-700 {
+            color: #22c55e !important;
+        }
+        :root[data-theme="dark"] .text-green-800 {
+            color: #86efac !important;
+        }
+        :root[data-theme="dark"] .text-green-900 {
+            color: #bbf7d0 !important;
+        }
+        :root[data-theme="dark"] .bg-amber-50 {
+            background-color: #1a1708 !important;
+        }
+        :root[data-theme="dark"] .bg-amber-100 {
+            background-color: #231e0b !important;
+        }
+        :root[data-theme="dark"] .border-amber-200 {
+            border-color: #4a3b1a !important;
+        }
+        :root[data-theme="dark"] .text-amber-600 {
+            color: #fbbf24 !important;
+        }
+        :root[data-theme="dark"] .text-amber-700,
+        :root[data-theme="dark"] .text-amber-700\/70 {
+            color: #f59e0b !important;
+        }
+        :root[data-theme="dark"] .text-amber-900 {
+            color: #fef3c7 !important;
+        }
         :root[data-skin="notebook"] body {
             font-family: "IBM Plex Mono", monospace;
         }
