--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camp · Songwriter Toolkit</title>
+    <title>Camp</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⛺</text></svg>">
-    <meta name="description" content="A collaborative toolkit for songwriting camps.">
-    <meta property="og:title" content="Camp · Songwriter Toolkit">
-    <meta property="og:description" content="A collaborative toolkit for songwriting camps.">
+    <meta name="description" content="A collaborative space for songwriting camps.">
+    <meta property="og:title" content="Camp">
+    <meta property="og:description" content="A collaborative space for songwriting camps.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Camp · Songwriter Toolkit">
-    <meta name="twitter:description" content="A collaborative toolkit for songwriting camps.">
+    <meta property="og:url" content="https://camp.themichaelwarren.com">
+    <meta property="og:image" content="https://camp.themichaelwarren.com/images/og-card.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Camp">
+    <meta name="twitter:description" content="A collaborative space for songwriting camps.">
+    <meta name="twitter:image" content="https://camp.themichaelwarren.com/images/og-card.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;600;800&family=IBM+Plex+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
