Fix OG image path to include /camp/ base prefix

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta property="og:description" content="A collaborative space for songwriting camps.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://camp.themichaelwarren.com">
-    <meta property="og:image" content="https://camp.themichaelwarren.com/images/og-card.png">
+    <meta property="og:image" content="https://camp.themichaelwarren.com/camp/images/og-card.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Camp">
     <meta name="twitter:description" content="A collaborative space for songwriting camps.">
-    <meta name="twitter:image" content="https://camp.themichaelwarren.com/images/og-card.png">
+    <meta name="twitter:image" content="https://camp.themichaelwarren.com/camp/images/og-card.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;600;800&family=IBM+Plex+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
