Extra credit prompts, player layout fix, auth token refresh, dark mode badges

--- a/index.html
+++ b/index.html
@@ -181,6 +181,25 @@
         :root[data-theme="dark"] .text-amber-900 {
             color: #fef3c7 !important;
         }
+        /* Season badge colors for dark mode (semester badges on Camper Detail, etc.) */
+        :root[data-theme="dark"] .bg-sky-100 {
+            background-color: #0c1929 !important;
+        }
+        :root[data-theme="dark"] .text-sky-700 {
+            color: #38bdf8 !important;
+        }
+        :root[data-theme="dark"] .bg-emerald-100 {
+            background-color: #0d2818 !important;
+        }
+        :root[data-theme="dark"] .text-emerald-700 {
+            color: #34d399 !important;
+        }
+        :root[data-theme="dark"] .bg-orange-100 {
+            background-color: #1f1408 !important;
+        }
+        :root[data-theme="dark"] .text-orange-700 {
+            color: #fb923c !important;
+        }
         :root[data-skin="notebook"] body {
             font-family: "IBM Plex Mono", monospace;
         }
